[package]
name = "blogger"
version = "0.1.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
serde = { version = "1.0", features = ["derive"] }
comrak = "0.9"
chrono = ""
